# AIHR

./: main.py  pyproject.toml  requirements.txt
app/API/: api.py  dependencies.py
app/api/: models.py  predict.py  status.py
app/core/: DB.py  core.py
app/db/: config.py  database.py  dependencies.py
app/dto/: shemas.py
app/models/: Base.py  base_adapter.py  manager.py
app/service/: base_adapter.py  manager.py
app/usecase/: model_usecase.py
