[project]
name = "fastapirep"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "click==8.2.1",
    "colorama==0.4.6",
    "fastapi==0.115.12",
    "h11==0.16.0",
    "idna==3.10",
    "model-manager>=0.8",
    "numpy>=2.3.0",
    "pydantic==2.11.6",
    "pydantic-core==2.33.2",
    "sniffio==1.3.1",
    "sqlalchemy>=2.0.41",
    "starlette==0.46.2",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "uvicorn==0.34.3",
]
